--- a/services/config-connector/0-cnrm-system.yaml
+++ b/services/config-connector/0-cnrm-system.yaml
@@ -235,6 +235,30 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - dns.cnrm.cloud.google.com
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - firestore.cnrm.cloud.google.com
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - iam.cnrm.cloud.google.com
   resources:
   - '*'
@@ -272,6 +296,18 @@ rules:
   - delete
 - apiGroups:
   - redis.cnrm.cloud.google.com
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - servicenetworking.cnrm.cloud.google.com
   resources:
   - '*'
   verbs:
@@ -400,16 +436,16 @@ spec:
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /var/secrets/google/key.json
-        image: gcr.io/cnrm-eap/controller:a1a62a1
+        image: gcr.io/cnrm-eap/controller:05c6639
         imagePullPolicy: Always
         name: manager
         resources:
           limits:
             cpu: 100m
-            memory: 60Mi
+            memory: 256Mi
           requests:
             cpu: 100m
-            memory: 40Mi
+            memory: 128Mi
         volumeMounts:
         - mountPath: /var/secrets/google
           name: gcp-service-account
